--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.6.2",
+    "autoprefixer": "^10.3.7",
     "axios": "^0.23.0",
     "next": "11.1.2",
+    "postcss": "^8.3.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-redux": "^7.2.5"
+    "react-redux": "^7.2.5",
+    "tailwindcss": "^2.2.17"
   },
   "devDependencies": {
     "@types/react": "17.0.29",
