--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react": "17.0.29",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-plugin-tailwindcss": "^1.17.0",
     "typescript": "4.4.4"
   }
 }
